--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,10 +19,10 @@
         <div class='row'>
         <div class="col-md-4"></div>
         <div class="col-md-2">
-          <p id="name">Name: <%= corgiName %><p>
+          <p id="name">Name: Ralph<p>
         </div>
         <div class="col-md-2">
-          <p id="age">Age: <%= corgiAge %></p>
+          <p id="age">Age: 4</p>
         </div>
         <div class="col-md-4"></div>
       </div>
